--- a/html/finalproject.html
+++ b/html/finalproject.html
@@ -17,7 +17,7 @@ November 28 2022-->
     </style>
 </head>
 <body>
-    <a class="topnav" href="../Index.html" id="top">Resume</a>
+    <a class="topnav" href="../index.html" id="top">Resume</a>
     
     <div class="heading">
        <p class="title">All About Penguins</p>
