--- a/html/finalproject.html
+++ b/html/finalproject.html
@@ -21,7 +21,7 @@ November 28 2022-->
     
     <div class="heading">
        <p class="title">All About Penguins</p>
-        <img src="../img/penguin.jpeg" height="300" alt="penguins standing on the ice">
+        <img src="../assets/img/penguin.jpeg" height="300" alt="penguins standing on the ice">
     
     <p class="ptext borderb">
         Penguins are flightless birds that live in one of the coldest parts of our world, Antartica.
