--- a/html/finalproject.html
+++ b/html/finalproject.html
@@ -21,7 +21,7 @@ November 28 2022-->
     
     <div class="heading">
        <p class="title">All About Penguins</p>
-        <img src="../assets/img/penguin.jpeg" height="300" alt="penguins standing on the ice">
+        <img src="./assets/penguin.jpeg" height="300" alt="penguins standing on the ice">
     
     <p class="ptext borderb">
         Penguins are flightless birds that live in one of the coldest parts of our world, Antartica.
@@ -35,7 +35,7 @@ November 28 2022-->
         <li class="listheading centered">African Penguin
             <ul>
                 <li class="listinfo">Only species native to Africa</li> 
-                <li><img src="../img/african.jpeg" height="150" alt="African Penguin"></li>
+                <li><img src="master/assets/african.jpeg" height="150" alt="African Penguin"></li>
             </ul>
         <li class="listheading">King Penguin
             <ul>
