--- a/html/finalproject.html
+++ b/html/finalproject.html
@@ -35,7 +35,7 @@ November 28 2022-->
         <li class="listheading centered">African Penguin
             <ul>
                 <li class="listinfo">Only species native to Africa</li> 
-                <li><img src="master/assets/african.jpeg" height="150" alt="African Penguin"></li>
+                <li><img src="./assets/african.jpeg" height="150" alt="African Penguin"></li>
             </ul>
         <li class="listheading">King Penguin
             <ul>
