--- a/index.html
+++ b/index.html
@@ -84,6 +84,9 @@
                 </div>
             </div>
         </div>
+        <div class="small text-center text-muted fst-italic">Copyright &copy; Emily Peterson 2022</div>
+        </footer>
+        </footer>
         <!-- Bootstrap core JS-->
         <script src="https://cdn.jsdelivr.net/npm/bootstrap@5.1.3/dist/js/bootstrap.bundle.min.js"></script>
         <!-- Core theme JS-->
